--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "restapi",
+  "name": "temp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "^1.13.3",
-    "config": "^1.19.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "config": "^3.3.8",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "moment-timezone": "^0.5.4",
-    "morgan": "~1.6.1",
-    "mysql": "^2.10.2",
-    "serve-favicon": "~2.3.0"
+    "moment-timezone": "^0.5.39",
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.3"
   }
 }
